--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.416.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
